fix scrolling overflow on mobile browsers

--- a/src/index.css
+++ b/src/index.css
@@ -21,18 +21,18 @@
   font-weight: 600;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
   box-sizing: inherit;
+}
+
+html,
+body {
+  position: relative;
+  overflow: hidden;
 }
 
 html {
@@ -42,11 +42,12 @@ html {
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: 'Larsseit', sans-serif;
   color: #2E2E2E;
   font-weight: 300;
   letter-spacing: .85px;
-  overflow-x: hidden;
   font-size: 1.6rem;
   height: 100%;
 }
